--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<h1>hola</h1>
+<div class="container">
+    <header class="jumbotron">
+      <p>{{ content }}</p>
+      
+    </header>
+  </div>
